--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-pom.xml
+*.class
+*.jar
 *jar
-/lib/
-/classes/
-/targets/
 .lein-deps-sum
+.lein-failures
+.lein-plugins
+.lein-repl-history
+/checkouts
+/classes/
+/lib/
+/target
+/targets/
+pom.xml
+pom.xml.asc
